<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Оборачиваем LinearLayout внутрь ScrollView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/main"
        android:layout_margin="16dp"
        tools:context=".MainActivity"
        tools:ignore="ExtraText,UselessParent">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/deletepkg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deletepkg"
            app:icon="@drawable/ic_trash"
            app:iconGravity="start"
            app:iconPadding="12dp"
            app:iconTint="@null"
            android:backgroundTint="?attr/colorPrimary"
            style="@style/Widget.MaterialComponents.Button"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton

        android:id="@+id/deletegmspkg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deletegmspkg"
        app:icon="@drawable/ic_trash"
        app:iconGravity="start"
        app:iconPadding="12dp"
        app:iconTint="@null"
        android:backgroundTint="?attr/colorPrimary"
        style="@style/Widget.MaterialComponents.Button"
        tools:ignore="VisualLintButtonSize" />





        <com.google.android.material.button.MaterialButton
            android:id="@+id/downloadmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/downloadmain"
            app:icon="@drawable/ic_download"
            app:iconGravity="start"
            app:iconPadding="12dp"
            app:iconTint="@null"
            android:backgroundTint="?attr/colorPrimary"
            style="@style/Widget.MaterialComponents.Button"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/unpackmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unpackmain"
            app:icon="@drawable/ic_unpack"
            app:iconGravity="start"
            app:iconPadding="12dp"
            app:iconTint="@null"
            android:backgroundTint="?attr/colorPrimary"
            style="@style/Widget.MaterialComponents.Button"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deletemain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deletemain"
            app:icon="@drawable/ic_trash"
            app:iconGravity="start"
            app:iconPadding="12dp"
            app:iconTint="@null"
            android:backgroundTint="?attr/colorPrimary"
            style="@style/Widget.MaterialComponents.Button"
            tools:ignore="VisualLintButtonSize" />







        <com.google.android.material.button.MaterialButton
            android:id="@+id/setwallpaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setwallpaper"
            app:icon="@drawable/ic_settings"
            app:iconGravity="start"
            app:iconPadding="12dp"
            app:iconTint="@null"
            android:backgroundTint="?attr/colorPrimary"
            style="@style/Widget.MaterialComponents.Button"
            tools:ignore="VisualLintButtonSize" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/downloadapk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/downloadapk"
            app:icon="@drawable/ic_download"
            app:iconGravity="start"
            app:iconPadding="12dp"
            app:iconTint="@null"
            android:backgroundTint="?attr/colorPrimary"
            style="@style/Widget.MaterialComponents.Button"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
    </ScrollView>
</FrameLayout>